--- a/Angular/first-angular-cli/src/app/app.component.html
+++ b/Angular/first-angular-cli/src/app/app.component.html
@@ -1,3 +1,15 @@
 <span>{{ title }}</span>
 <br/>
 <app-task-list></app-task-list>
+<br>
+{{ user | json}}
+<br>
+{{ upperText | uppercase}}
+<br>
+{{ lowerText | lowercase}}
+<br>
+{{ percentValue | percent}}
+<br>
+{{ dateValue | date : 'dd/MM/yyyy'}}
+<br>
+{{ money | currency }
