--- a/Angular/first-angular-cli/src/app/app.component.html
+++ b/Angular/first-angular-cli/src/app/app.component.html
@@ -12,4 +12,15 @@
 <br>
 {{ dateValue | date : 'dd/MM/yyyy'}}
 <br>
-{{ money | currency }
+{{ money | currency }}
+<br>
+<div *ngIf="isAdmin2">
+    Administrator 2
+</div>
+<br>
+<div [ngSwitch]="profile">
+    <p *ngSwitchCase="1">You can read & write</p>
+    <p *ngSwitchCase="2">You can read</p>
+    <p *ngSwitchDefault>Go back, please !</p>
+
+</div>
