--- a/Angular/helpdesk/src/app/components/user-new/user-new.component.html
+++ b/Angular/helpdesk/src/app/components/user-new/user-new.component.html
@@ -27,11 +27,29 @@
           </div>
         </div>
 
+        <div [ngClass]="getFromGroupClass(profile.invalid, profile.dirty)">
+          <label for="inputPassword" class="col-sm-2 control-label">Profile</label>
+          <div class="col-sm-10">
+            <select 
+                  [(ngModel)]="user.profile" 
+                  name="profile" 
+                  class="form-control select2" 
+                  id="inputProfile" 
+                  #profile="ngModel"
+                  style="width: 100%;" 
+                  required>
+                  <option>ROLE_ADMIN</option>
+                  <option>ROLE_CUSTOMER</option>
+                  <option>ROLE_TECHNICIAN</option>
+            </select>
+            <span class="help-block" *ngIf="profile.invalid && profile.dirty"> Profile is required</span>
+          </div>
+        </div>
+
         
       </div>
       <div class="box-footer">
-        <button type="submit" (click)="cancelLogin()" class="btn btn-default">Cancel</button>
-        <button type="submit" [disabled]="!form.valid" class="btn btn-info pull-right">Sign in</button>
+        <button type="submit" [disabled]="!form.valid" class="btn btn-info pull-right">New User</button>
       </div>
     </form>
   </div>
